<resources>
    <string name="app_name">First Impression</string>
    <string name="action_settings">Settings</string>

    <!-- Common -->
    <string name="impression_ok">OK</string>
    <string name="impression_cancel">Cancel</string>
    <string name="impression_divider">/</string>

    <string name="item_gender_male">Male</string>
    <string name="item_gender_female">Female</string>
    <string name="item_generation_under10">Under 10</string>
    <string name="item_generation_from10_20">From 10 to 20</string>
    <string name="item_generation_from20_30">From 20 to 30</string>
    <string name="item_generation_from30_40">From 30 to 40</string>
    <string name="item_generation_from40_50">From 40 to 50</string>
    <string name="item_generation_from50_60">From 50 to 60</string>
    <string name="item_generation_from60_70">From 60 to 70</string>
    <string name="item_generation_over70">Over 70</string>

    <!-- Drawer -->
    <string name="drawer_item_setting">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_privacy">Privacy policy</string>
    <string name="drawer_item_terms">Terms of service</string>

    <!-- Time -->
    <string name="str_generic_time_before">" before"</string>
    <string name="str_generic_time_sec">" sec"</string>
    <string name="str_generic_time_min">" min"</string>
    <string name="str_generic_time_hour">" hour"</string>
    <string name="str_generic_time_unknown_date">Unknown date</string>

    <!-- Sprash page -->
    <string name="sprash_description_text">Get feedback for your question immediately</string>
    <string name="sprash_check_question_button">Check questions without sign in</string>
    <string name="sprash_sign_upin_button">Sign up / in</string>

    <!-- Main page -->
    <string name="main_card_title_divider">-</string>

    <string name="main_page_current_point">Your point: %1$d</string>
    <string name="main_pgae_create_question">Create question</string>
    <string name="main_page_not_enough_point_to_create_question">Not enough point to create question. Reply to question first.</string>
    <string name="main_pgae_no_question">No question</string>

    <!-- Welcome page -->
    <string name="welcome_service_description">First impression is a service that enable you to check your idea quickly.</string>
    <string name="welcome_signin_button">Sign in</string>
    <string name="welcome_signup_button">Sign up</string>

    <!-- Sign in fragment -->
    <string name="signin_title">Sign in</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_hint_username">User name</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="sign_in_forget_password">Forget password?</string>
    <string name="sign_in_error_username_null">You must input user name</string>
    <string name="sign_in_error_username_short">User name must be more than 4 characters</string>
    <string name="sign_in_error_username_long">User name must be less than 16 characters</string>
    <string name="sign_in_error_password_null">You must input password</string>
    <string name="sign_in_error_password_short">Password must be more than 4 characters</string>
    <string name="sign_in_error_password_long">Password must be less than 16 characters</string>
    <string name="sign_in_error_password_invalid_character">Invalid password character</string>

    <!-- Sign up fragment -->
    <string name="signup_title">Sign up</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up_service_notice">By signing up, you agree to:</string>
    <string name="sign_up_tos">Terms of service</string>
    <string name="sign_up_privacy_policy">Privacy policy</string>
    <string name="spinner_gender_select_indication">Select gender</string>
    <string name="spinner_age_select_indication">Select age</string>

    <!-- Answer fragment -->
    <string name="answer_detail_choice_a">A</string>
    <string name="answer_detail_choice_b">B</string>

    <!-- Create question fragment -->
    <string name="str_create_question_description">Description</string>
    <string name="str_create_question_choice_a">Choice A</string>
    <string name="str_create_question_choice_b">Choice B</string>
    <string name="str_create_question_create_button">Create question</string>
    <string name="str_create_question_error_desc_null">You must input description</string>
    <string name="str_create_question_error_desc_short">Description must be more than 4 characters</string>
    <string name="str_create_question_error_desc_long">Description must be less than 64 characters</string>
    <string name="str_create_question_error_choice_null">You must input choice</string>
    <string name="str_create_question_error_choice_short">Choice must be more than 2 characters</string>
    <string name="str_create_question_error_choice_long">Choice must be less than 32 characters</string>


    <!-- Notification dialog -->
    <string name="notification_dialog_title">Information</string>
    <string name="notification_dialog_desc">You need to sign up before answer question</string>
    <string name="notification_dialog_sign_up">Sign in/up</string>

    <!-- Profile dialog -->
    <string name="profile_dialog_age_text">Age</string>
    <string name="profile_dialog_gender_text">Gender</string>
    <string name="profile_dialog_answer">Answer</string>
    <string name="profile_dialog_signup_merit_text">If you sign up, you can ask question</string>
    <string name="profile_dialog_signup_button">Sign up</string>
    <string name="profile_dialog_signin_note">If you already have account</string>
    <string name="profile_dialog_signin_button">Already have account? Sign in</string>

    <!-- Error message fragment -->
    <string name="error_message_title">Error message</string>

    <!-- Notification -->
    <string name="notification_title">First impression</string>
    <string name="notification_content">You got new notification</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
