<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView android:text="@string/signup_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center" />
    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:hint="@string/sign_in_hint_username"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:hint="@string/sign_in_hint_password"
        android:layout_height="wrap_content" />
    <Button android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"/>
</LinearLayout>