<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/create_question_description"
        android:hint="@string/str_create_question_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/create_question_choice_a"
        android:hint="@string/str_create_question_choice_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/create_question_choice_b"
        android:hint="@string/str_create_question_choice_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/create_question_create_button"
        android:text="@string/str_create_question_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>