<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/simple_signup_username_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/simple_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_hint_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/simple_signup_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/simple_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="@dimen/prompt_vertical_margin"
        android:layout_width="wrap_content"
        android:text="@string/sign_up_service_notice"
        android:gravity="right"
        android:textSize="@dimen/fi_font_extra_small"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/simple_signup_terms_tos"
        android:orientation="horizontal"
        android:layout_above="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/prompt_vertical_margin"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/simple_signup_tos"
            android:layout_width="wrap_content"
            android:text="@string/sign_up_tos"
            android:textSize="@dimen/fi_font_extra_small"
            android:gravity="right"
            android:textColor="@color/impressionAccent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/impression_divider"
            android:textSize="@dimen/fi_font_extra_small"
            android:gravity="right"
            android:layout_marginLeft="@dimen/welcome_divider_margin"
            android:layout_marginRight="@dimen/welcome_divider_margin"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/simple_signup_privacy_policy"
            android:layout_width="wrap_content"
            android:textSize="@dimen/fi_font_extra_small"
            android:text="@string/sign_up_privacy_policy"
            android:gravity="right"
            android:textColor="@color/impressionAccent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button android:id="@+id/simple_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/welcome_action2_button"
        android:textColor="@drawable/welcome_action_button_text"
        android:layout_marginTop="@dimen/default_view_vartical_margin"
        android:layout_marginBottom="@dimen/default_view_vartical_margin"
        android:text="@string/sign_up_button"/>
</LinearLayout>