<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/sprash_bg_icn"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_above="@+id/sprash_check_question_button"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/sprash_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/impression_white"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:textSize="@dimen/fi_font_extra_large"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/impression_white"
            android:text="@string/sprash_description_text"
            android:layout_below="@+id/sprash_title_text"
            android:textSize="@dimen/fi_font_large"/>
    </RelativeLayout>
    <Button
        android:id="@+id/sprash_check_question_button"
        android:text="@string/sprash_check_question_button"
        android:layout_above="@+id/sprash_signinup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sprash_signinup_button"
        android:text="@string/sprash_sign_upin_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>