<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/welcome_service_image"
        android:src="@drawable/impression_welcome_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@+id/welcome_service_image"
        android:text="@string/welcome_service_description"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:text="@string/welcome_signin_button"
        android:layout_above="@+id/signup_button"
        android:layout_height="wrap_content">
    </Button>

    <Button android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:text="@string/welcome_signup_button"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
    </Button>
</RelativeLayout>