<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/default_form_vertical_block"
    android:layout_marginRight="@dimen/default_form_horizontal_space"
    android:layout_marginLeft="@dimen/default_form_horizontal_space">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signin_username_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginTop="@dimen/default_view_vartical_margin"
                android:layout_marginBottom="@dimen/default_view_vartical_margin"
                android:id="@+id/signin_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sign_in_hint_username" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signin_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginTop="@dimen/default_view_vartical_margin"
                android:layout_marginBottom="@dimen/default_view_vartical_margin"
                android:id="@+id/signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/sign_in_hint_password" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/default_form_vertical_block"
        android:layout_marginBottom="@dimen/default_view_vartical_margin"
        android:id="@+id/signin_forget_password"
        android:layout_width="match_parent"
        android:text="@string/sign_in_forget_password"
        android:gravity="right"
        android:textColor="@color/impressionAccent"
        android:layout_above="@+id/signin_button"
        android:layout_height="wrap_content" />
    <Button android:id="@+id/signin_button"
        android:layout_marginTop="@dimen/default_view_vartical_margin"
        android:layout_marginBottom="@dimen/default_view_vartical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@drawable/welcome_action_button_text"
        android:background="@drawable/welcome_action_button"
        android:text="@string/sign_in_button"/>
</LinearLayout>