<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/prompt_wizard_header_image_height"
        android:layout_marginTop="@dimen/prompt_wizard_header_top_margin"
        android:layout_marginBottom="@dimen/prompt_wizard_header_bottom_margin"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/fi_signup_prompt_wizard_3rd"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fi_font_middle"
        android:gravity="center"
        android:text="@string/profile_prompt_dialog_3rd_main_text"
        android:layout_marginBottom="@dimen/prompt_wizard_header_bottom_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/sign_up_service_notice"
            android:layout_marginTop="@dimen/prompt_vertical_margin"
            android:layout_marginBottom="@dimen/prompt_wizard_signup_notice_margin"
            android:paddingLeft="@dimen/prompt_horizontal_padding"
            android:paddingRight="@dimen/prompt_horizontal_padding"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/simple_signup_terms_tos"
            android:orientation="horizontal"
            android:layout_above="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/signup_prompt_tos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_tos"
                android:textSize="@dimen/fi_font_extra_small"
                android:textColor="@color/impressionAccent"
                android:paddingLeft="@dimen/prompt_horizontal_padding"
                android:paddingRight="@dimen/prompt_horizontal_padding" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impression_divider"
                android:textSize="@dimen/fi_font_extra_small" />
            <TextView
                android:id="@+id/signup_prompt_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fi_font_extra_small"
                android:text="@string/sign_up_privacy_policy"
                android:textColor="@color/impressionAccent"
                android:paddingLeft="@dimen/prompt_horizontal_padding"
                android:paddingRight="@dimen/prompt_horizontal_padding"/>
        </LinearLayout>

</LinearLayout>